--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     
     <groupId>com.spicehub</groupId>
     <artifactId>spicehub-webapp</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.1.1</version>
     <packaging>war</packaging>
     
     <name>SpiceHub Restaurant Web Application</name>
